package eu.dc5.domain.service;

import java.util.List;

public class DC5Domain {
    private Long id;
    private String name;
    private List<DC5DomainProperty> properties;
}
