package eu.dc5.domain.service;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
@AllArgsConstructor
public class DC5DomainProperty {
    private String name;
    private String value;
}
